# Pico-Parallel-WS2812b

./: CMakeLists.txt  pico_parallel_ws2812b.c  pico_parallel_ws2812b.pio
